WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66529
Mid-word break can occur between a character and a combining mark
https://bugs.webkit.org/show_bug.cgi?id=66529
Summary
Mid-word break can occur between a character and a combining mark
mitz
Reported
2011-08-18 20:21:48 PDT
Mid-word break can occur between a character and a combining mark
Attachments
Patch
(1.65 KB, patch)
2011-08-18 20:25 PDT
,
mitz
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-08-18 20:25:22 PDT
Created
attachment 104446
[details]
Patch
mitz
Comment 2
2011-08-18 20:34:56 PDT
Fixed in <
http://trac.webkit.org/r93384
>.
Zoltan Horvath
Comment 3
2011-08-19 00:57:09 PDT
I committed a build fix for Qt in
r93388
.
http://trac.webkit.org/changeset/93388
mitz
Comment 4
2011-08-19 09:00:01 PDT
(In reply to
comment #3
)
> I committed a build fix for Qt in
r93388
. > >
http://trac.webkit.org/changeset/93388
Thanks. I will change this to use WTF::Unicode::category().
mitz
Comment 5
2011-08-19 09:30:02 PDT
In <
http://trac.webkit.org/r93421
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug