Mid-word break can occur between a character and a combining mark https://bugs.webkit.org/show_bug.cgi?id=66529

Reviewed by Simon Fraser.

No test added because I could not find a combining mark with a non-zero advance in
any of the system fonts and tests fonts.

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::LineBreaker::nextLineBreak): Disallow a mid-word break before a
combining mark.



Canonical link: https://commits.webkit.org/82374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93384 268f45cc-cd09-0410-ab3c-d52691b4dbfc